--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./SASS/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Nunito:wght@300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&family=Nunito:wght@300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap"
+          rel="stylesheet">
     <title>Balloons Project</title>
 </head>
 <body>
-    <div class="container">
+<div class="container">
     <header class="header">
         <img class="header__logo" src="img/Icon.svg" alt="logo">
         <div class="header__box">
@@ -21,6 +22,13 @@
             <a href="#" class="btn btn_animated">наш каталог</a>
         </div>
     </header>
-    </div>
+    <main>
+         <section class="section-about">
+             <h2 class="title-secondary">
+                 НЕВЕРОЯТНОЕ ОЩУЩЕНИЕ СВОБОДЫ
+             </h2>
+         </section>
+    </main>
+</div>
 </body>
 </html>
