--- a/index.html
+++ b/index.html
@@ -23,11 +23,28 @@
         </div>
     </header>
     <main>
-         <section class="section-about">
-             <h2 class="title-secondary">
-                 НЕВЕРОЯТНОЕ ОЩУЩЕНИЕ СВОБОДЫ
-             </h2>
-         </section>
+        <section class="about">
+            <h2 class="title-secondary">
+                НЕВЕРОЯТНОЕ ОЩУЩЕНИЕ СВОБОДЫ
+            </h2>
+            <div class="about__wrapper">
+                <div class="about__items">
+                    <h3 class="about__title">ПОЗВОЛЬТЕ СЕБЕ ПРИКЛЮЧЕНИЕ</h3>
+                    <p class="about__desc">Задача организации, в особенности же дальнейшее развитие различных форм
+                        деятельности влечет за собой процесс внедрениям и модернизации соответствующий условий
+                        активизации. Таким образом начало повседневной работы по формированию позиции влечет.</p>
+                    <h3 class="about__title">ВВЕРХ НА 6000 МЕТРОВ НАД УРОВНЕМ МОРЯ</h3>
+                    <p class="about__desc">Задача организации, в особенности же дальнейшее развитие различных форм
+                        деятельности влечет за собой процесс внедрения и модернизации соответствующий условий
+                        активизации. Таким образом начало повседневной работы по формированию позиции влечет.</p>
+                    <a href="#" class="about__more" >Узнать больше &#8594</a>
+                </div>
+
+                <div class="about__images">
+                    photo
+                </div>
+            </div>
+        </section>
     </main>
 </div>
 </body>
